--- a/src/app/components/main/thread/thread.component.scss
+++ b/src/app/components/main/thread/thread.component.scss
@@ -4,6 +4,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 button {
@@ -20,9 +21,9 @@ button {
 .thread-main {
   display: flex;
   flex-direction: column;
-  padding: 16px;
-  flex-grow: 1;
   background-color: #fff;
+  overflow-y: scroll;
+  height: 100%;
 }
 
 .header {
